cmake_minimum_required(VERSION 2.8)

project(XdevLOpenGLContextWGL)

#
# Set the names for the stuff we are going to create

set(XdevLOpenGLContextWGLLibrary XdevLOpenGLContextWGL)

#
# Set the Plugin version
#

set(XDEVLOPENGLCONTEXT_WGL_MAJOR_VERSION 0)
set(XDEVLOPENGLCONTEXT_WGL_MINOR_VERSION 1)
set(XDEVLOPENGLCONTEXT_WGL_PATCH_VERSION 0)
set(XDEVLOPENGLCONTEXT_WGL_VERSION "${XDEVLOPENGLCONTEXT_WGL_MAJOR_VERSION}.${XDEVLOPENGLCONTEXT_WGL_MINOR_VERSION}.${XDEVLOPENGLCONTEXT_WGL_PATCH_VERSION}")

add_definitions(
	-DXDEVLOPENGLCONTEXT_WGL_MAJOR_VERSION=${XDEVLOPENGLCONTEXT_WGL_MAJOR_VERSION}
	-DXDEVLOPENGLCONTEXT_WGL_MINOR_VERSION=${XDEVLOPENGLCONTEXT_WGL_MINOR_VERSION} 
	-DXDEVLOPENGLCONTEXT_WGL_PATCH_VERSION=${XDEVLOPENGLCONTEXT_WGL_PATCH_VERSION}
)

#
# Set the Module version
#

set(XDEVLOPENGLCONTEXT_WGL_MODULE_MAJOR_VERSION 0)
set(XDEVLOPENGLCONTEXT_WGL_MODULE_MINOR_VERSION 1)
set(XDEVLOPENGLCONTEXT_WGL_MODULE_PATCH_VERSION 0)
set(XDEVLOPENGLCONTEXT_WGL_MODULE_VERSION "${XDEVLOPENGLCONTEXT_WGL_MODULE_MAJOR_VERSION}.${XDEVLOPENGLCONTEXT_WGL_MODULE_MINOR_VERSION}.${XDEVLOPENGLCONTEXT_WGL_MODULE_PATCH_VERSION}")

add_definitions(
	-DXDEVLOPENGLCONTEXT_WGL_MODULE_MAJOR_VERSION=${XDEVLOPENGLCONTEXT_WGL_MODULE_MAJOR_VERSION}
	-DXDEVLOPENGLCONTEXT_WGL_MODULE_MINOR_VERSION=${XDEVLOPENGLCONTEXT_WGL_MODULE_MINOR_VERSION} 
	-DXDEVLOPENGLCONTEXT_WGL_MODULE_PATCH_VERSION=${XDEVLOPENGLCONTEXT_WGL_MODULE_PATCH_VERSION}
)

#
# Set variable names for the library

set(HEADERS_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})

#
# Set the output directories

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY  ${XDEVL_PLUGINS}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG  ${XDEVL_PLUGINS}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE  ${XDEVL_PLUGINS}/lib)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY  ${XDEVL_PLUGINS}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG  ${XDEVL_PLUGINS}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE  ${XDEVL_PLUGINS}/lib)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY . ${XDEVL_PLUGINS}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG  ${XDEVL_PLUGINS}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE  ${XDEVL_PLUGINS}/lib)


#
# Add include directories

include_directories(
	.
	${XDEVL_HOME}/include
	${XDEVL_PLUGINS}
	${XDEVL_PLUGINS}/XdevLOpenGLContext
)


#
# Set header files for the library.

set(HEADER_INTERFACE_FILE 
	${XDEVL_PLUGINS}/XdevLOpenGLContext/XdevLOpenGLContext.h
)

set(HEADER_FILES
	${HEADER_INTERFACE_FILE}
	${XDEVL_PLUGINS}/XdevLOpenGLContext/XdevLOpenGLContextBase.h
	${HEADERS_DIR}/XdevLOpenGLContextWGL.h
)

#
# Set the source files for the library.

set(SOURCE_FILES
	${SRC_DIR}/XdevLOpenGLContextWGL.cpp
)

#
# Add external libraries folder

link_directories(
	${XdevL_BINARY_DIR}/lib
)

#
# Create the library

add_library(${XdevLOpenGLContextWGLLibrary} SHARED
    ${HEADER_FILES}
    ${SOURCE_FILES}
)

#
# Add external ibraries

set(LIBS ${OPENGL_gl_LIBRARY} )

if(CMAKE_BUILD_TYPE MATCHES Debug)
	set(LIBS ${LIBS} XdevLd )
else()
	set(LIBS ${LIBS} XdevL )
endif()

target_link_libraries(${XdevLOpenGLContextWGLLibrary} ${LIBS} opengl32.lib)

#
# Change the outputname of the library

set_property(TARGET ${XdevLOpenGLContextWGLLibrary} PROPERTY PREFIX "${XDEVL_SHARED_LIBRARY_FILE_PREFIX}")

if(CMAKE_BUILD_TYPE MATCHES Debug)
	set_property(TARGET ${XdevLOpenGLContextWGLLibrary} PROPERTY SUFFIX "-${XDEVLOPENGLCONTEXT_WGL_VERSION}d${XDEVL_SHARED_LIBRARY_FILE_EXTENSION}")
else()
	set_property(TARGET ${XdevLOpenGLContextWGLLibrary} PROPERTY SUFFIX "-${XDEVLOPENGLCONTEXT_WGL_VERSION}${XDEVL_SHARED_LIBRARY_FILE_EXTENSION}")
endif()

install(FILES ${HEADER_INTERFACE_FILE} DESTINATION "${XDEVL_PLUGINS_INCLUDE_INSTALL_PATH}/XdevLOpenGLContext")
install(TARGETS ${XdevLOpenGLContextWGLLibrary} DESTINATION ${XDEVL_PLUGINS_INSTALL_PATH})
